--- a/client-word/src/main/resources/bootstrap.yml
+++ b/client-word/src/main/resources/bootstrap.yml
@@ -12,12 +12,13 @@ server:
 spring:
   profiles: noun2
   application:
-    name: eureka-client-noun-2
-  cloud:
-    config:
-      uri: http://localhost:8090
+    name: eureka-client-noun
 server:
-  port: 8084
+  port: 8096
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8091/eureka/
 ---
 spring:
   profiles: verb
